ensure deploy comes before release

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,7 +107,7 @@ workflows:
               only: master
       - release:
           requires:
-            - build
+            - deploy
           filters:
             branches:
               only: master
