--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@input-output-hk/mailchimp-subscribe",
-  "version": "0.2.0",
-  "description": "i18n friendly mailchimp subscriber",
+  "version": "0.3.0",
+  "description": "Lightweight mailchimp subscriber library supporting custom fields",
   "main": "build/index.js",
   "homepage": "https://github.com/input-output-hk/mailchimp-subscribe",
   "scripts": {
@@ -15,11 +15,7 @@
   "keywords": [
     "mailchimp",
     "subscribe",
-    "i18n",
-    "internationalization",
-    "locale",
-    "localization",
-    "language"
+    "custom"
   ],
   "repository": {
     "type": "git",
